[tool.poetry]
name = "uniad"
version = "0.1.0"
description = ""
authors = ["ktro2828 <kotaro.uetake@tier4.jp>"]
license = "Apatch-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-cloud-bigquery = "*"
motmetrics = "^1.1.3"
einops = "^0.4.1"
casadi = "^3.5.5"
# torch
torch = { url = "https://download.pytorch.org/whl/cu116/torch-1.13.0%2Bcu116-cp310-cp310-linux_x86_64.whl" }
pytorch-lightning = "^1.2.5"
# open-mmlab
mmcv-full = { url = "https://download.openmmlab.com/mmcv/dist/cu116/torch1.13.0/mmcv_full-1.7.0-cp310-cp310-manylinux1_x86_64.whl" }
mmdet = "^2.16.0"
mmsegmentation = "^0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.poetry.scripts]
create_data = "tools.create_data:main"
train = "tools.train:main"
test = "tools.test:main"
